# swisspost-evoting-go-poc

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Makefile  README.md  go.mod  go.sum  manual.html  presentation-crypto.html  presentation-swe.html  presentation.html
.claude/: launch.json
cmd/evote/: cockpit.go  cockpit_tmux.go  demo.go  main.go  netdemo.go  panelview.go  presentation.go  serve.go  tally.go  verify.go  vote.go
docs/: blog-draft-live-crypto-cockpit.md
pkg/elgamal/: ciphertext.go  decrypt.go  elgamal_test.go  encrypt.go  keys.go  message.go  ops.go
pkg/hash/: conversions.go  hash_test.go  hashable.go  hashandsquare.go  recursive.go
pkg/kdf/: hkdf.go  kdf_test.go
pkg/math/: gqelement.go  gqgroup.go  groupmatrix.go  groupvector.go  primes.go  random.go  random_test.go  testgroup_test.go  zqelement.go  zqgroup.go
pkg/mixnet/: commitment.go  hadamard_argument.go  hash_helpers.go  multiexp_argument.go  multiexp_test.go  permutation.go  product_argument.go  shuffle.go  shuffle_argument.go  shuffle_test.go  starmap.go  svp_argument.go  trace_hooks.go  verifiable_shuffle.go  zero_argument.go
pkg/party/: ceremony.go  ceremony_test.go  codes.go  codes_test.go  e2e_test.go  parties.go  phases.go  returncode_extract.go  setup.go  setup_test.go  state.go  tally.go  trace_test.go  transcript.go  verify.go  voting.go  voting_test.go  wire.go
pkg/protocol/: actors.go  config.go  confirm.go  protocol_test.go  setup.go  tally.go  types.go  vote.go
rust/transportsec/: Cargo.toml
rust/transportsec/include/: transportsec.h
rust/transportsec/src/: lib.rs
(+30 files in other folders)
